==> sicrisembay/g431b-esc-c/components/canopen/CO_driver.c <==
#include "stm32g4xx_hal.h"
#include "qpc.h"
#include "301/CO_driver.h"

void
CO_CANsetNormalMode(CO_CANmodule_t* CANmodule) {
    /* Put CAN module in normal mode */
    if((CANmodule == NULL) || (CANmodule->CANptr == NULL)) {
        return;
    }
    if(CANmodule->CANnormal == false) {
        FDCAN_HandleTypeDef * hfdcan = (FDCAN_HandleTypeDef *)CANmodule->CANptr;

        Q_ASSERT(HAL_FDCAN_ConfigTxDelayCompensation(hfdcan, 32, 0) == HAL_OK);
        Q_ASSERT(HAL_FDCAN_EnableTxDelayCompensation(hfdcan) == HAL_OK);
        Q_ASSERT(HAL_FDCAN_Start(hfdcan) == HAL_OK);
        Q_ASSERT(HAL_FDCAN_ActivateNotification(hfdcan,
                (FDCAN_IT_RX_FIFO0_NEW_MESSAGE | FDCAN_IT_TX_FIFO_EMPTY |
                FDCAN_IT_TX_ABORT_COMPLETE | FDCAN_IT_ERROR_PASSIVE | FDCAN_IT_ERROR_WARNING | FDCAN_IT_BUS_OFF),
                FDCAN_TX_BUFFER0) == HAL_OK);

        CANmodule->CANnormal = true;
    }
}

CO_ReturnError_t
CO_CANmodule_init(CO_CANmodule_t* CANmodule, void* CANptr, CO_CANrx_t rxArray[], uint16_t rxSize, CO_CANtx_t txArray[],
                  uint16_t txSize, uint16_t CANbitRate) {
    uint16_t i;

    /* verify arguments */
    Q_ASSERT((CANmodule != NULL) && (rxArray != NULL) &&
             (txArray != NULL) && (rxSize < 28U));

    /* Configure object variables */
    CANmodule->CANptr = CANptr;
    CANmodule->rxArray = rxArray;
    CANmodule->rxSize = rxSize;
    CANmodule->txArray = txArray;
    CANmodule->txSize = txSize;
    CANmodule->CANerrorStatus = 0;
    CANmodule->CANnormal = false;
    CANmodule->useCANrxFilters = true;
    CANmodule->bufferInhibitFlag = false;
    CANmodule->firstCANtxMessage = true;
    CANmodule->CANtxCount = 0U;
    CANmodule->errOld = 0U;

    pModule = CANmodule;

    for (i = 0U; i < rxSize; i++) {
        rxArray[i].ident = 0U;
        rxArray[i].mask = 0xFFFFU;
        rxArray[i].object = NULL;
        rxArray[i].CANrx_callback = NULL;
    }
    for (i = 0U; i < txSize; i++) {
        txArray[i].bufferFull = false;
    }

    /* Configure CAN module registers */
    FDCAN_HandleTypeDef * hfdcan = (FDCAN_HandleTypeDef *)CANptr;

    HAL_FDCAN_DeInit(hfdcan);
    hfdcan->Init.StdFiltersNbr = rxSize;  // New number of standard filters
    HAL_FDCAN_Init(hfdcan);
    for (i = 0U; i < rxSize; i++) {
        FDCAN_FilterTypeDef sFilterConfig;
        sFilterConfig.IdType = FDCAN_STANDARD_ID;
        sFilterConfig.FilterIndex = i;
        sFilterConfig.FilterType = FDCAN_FILTER_MASK;
        sFilterConfig.FilterConfig = FDCAN_FILTER_DISABLE;
        sFilterConfig.FilterID1 = 0;
        sFilterConfig.FilterID2 = 0;
        Q_ASSERT(HAL_OK == HAL_FDCAN_ConfigFilter(hfdcan, &sFilterConfig));
    }
    /* Configure CAN timing */

    /* Configure CAN module hardware filters */
    Q_ASSERT(HAL_OK == HAL_FDCAN_ConfigGlobalFilter(
                                hfdcan,
                                FDCAN_REJECT,          /* unmatched standard IDs */
                                FDCAN_REJECT,          /* unmatched extended IDs  */
                                FDCAN_REJECT_REMOTE,   /* unmatched std RTR       */
                                FDCAN_REJECT_REMOTE));  /* unmatched ext RTR       */

    /* configure CAN interrupt registers */

    return CO_ERROR_NO;
}

void
CO_CANmodule_disable(CO_CANmodule_t* CANmodule) {
    if(CANmodule != NULL) {
        if(CANmodule->CANnormal) {
            CANmodule->CANnormal = false;
            if(CANmodule->CANptr != NULL) {
                /* turn off the module */
                FDCAN_HandleTypeDef * hfdcan = (FDCAN_HandleTypeDef *)CANmodule->CANptr;
                if(hfdcan->State == HAL_FDCAN_STATE_BUSY) {
                    Q_ASSERT(HAL_OK == HAL_FDCAN_Stop(hfdcan));
                }
            }
        }
    }
}

CO_ReturnError_t
CO_CANrxBufferInit(CO_CANmodule_t* CANmodule, uint16_t index, uint16_t ident, uint16_t mask, bool_t rtr, void* object,
                   void (*CANrx_callback)(void* object, void* message)) {
    CO_ReturnError_t ret = CO_ERROR_NO;

    if ((CANmodule != NULL) && (object != NULL) && (CANrx_callback != NULL) && (index < CANmodule->rxSize)) {
        /* buffer, which will be configured */
        CO_CANrx_t* buffer = &CANmodule->rxArray[index];

        /* Configure object variables */
        buffer->object = object;
        buffer->CANrx_callback = CANrx_callback;

        /* CAN identifier and CAN mask, bit aligned with CAN module. Different on different microcontrollers. */
        buffer->ident = ident & 0x07FFU;
        if (rtr) {
            // RTR not supported
        }
        buffer->mask = (mask & 0x07FFU);

        /* Set CAN hardware module filter and mask. */
        if (CANmodule->useCANrxFilters) {
            FDCAN_FilterTypeDef sFilterConfig;
            sFilterConfig.IdType = FDCAN_STANDARD_ID;
            sFilterConfig.FilterIndex = index;
            sFilterConfig.FilterType = FDCAN_FILTER_MASK;
            sFilterConfig.FilterConfig = FDCAN_FILTER_TO_RXFIFO0;
            sFilterConfig.FilterID1 = buffer->ident;
            sFilterConfig.FilterID2 = buffer->mask;

            FDCAN_HandleTypeDef * hfdcan = (FDCAN_HandleTypeDef *)CANmodule->CANptr;
            if(CANmodule->CANnormal) {
                Q_ASSERT(HAL_OK == HAL_FDCAN_Stop(hfdcan));
            }

            Q_ASSERT(HAL_OK == HAL_FDCAN_ConfigFilter(hfdcan, &sFilterConfig));

            if(CANmodule->CANnormal) {
                Q_ASSERT(HAL_OK == HAL_FDCAN_Start(hfdcan));
            }
        }
    } else {
        ret = CO_ERROR_ILLEGAL_ARGUMENT;
    }

    return ret;
}

CO_ReturnError_t
CO_CANsend(CO_CANmodule_t* CANmodule, CO_CANtx_t* buffer) {
    CO_ReturnError_t err = CO_ERROR_NO;

    /* Verify overflow */
    if (buffer->bufferFull) {
        if (!CANmodule->firstCANtxMessage) {
            /* don't set error, if bootup message is still on buffers */
            CANmodule->CANerrorStatus |= CO_CAN_ERRTX_OVERFLOW;
        }
        err = CO_ERROR_TX_OVERFLOW;
    }

    CO_LOCK_CAN_SEND(CANmodule);
    /* if CAN TX buffer is free, copy message to it */
    if (CANmodule->CANtxCount == 0) {
        CANmodule->bufferInhibitFlag = buffer->syncFlag;
        /* copy message and txRequest */
        FDCAN_TxHeaderTypeDef txHeader;
        txHeader.Identifier = buffer->ident;
        txHeader.IdType = FDCAN_STANDARD_ID;
        txHeader.TxFrameType = FDCAN_DATA_FRAME;
        txHeader.ErrorStateIndicator = FDCAN_ESI_ACTIVE;
        txHeader.BitRateSwitch = FDCAN_BRS_OFF;
        txHeader.FDFormat = FDCAN_CLASSIC_CAN;
        txHeader.TxEventFifoControl = FDCAN_NO_TX_EVENTS;
        txHeader.MessageMarker = 0;
        txHeader.DataLength = buffer->DLC;

        FDCAN_HandleTypeDef * hfdcan = (FDCAN_HandleTypeDef *)CANmodule->CANptr;
        Q_ASSERT(HAL_OK == HAL_FDCAN_AddMessageToTxFifoQ(
                    hfdcan,
                    &txHeader,
                    buffer->data
                    ));
    }
    /* if no buffer is free, message will be sent by interrupt */
    else {
        buffer->bufferFull = true;
        CANmodule->CANtxCount++;
    }
    CO_UNLOCK_CAN_SEND(CANmodule);

    return err;
}

void
CO_CANclearPendingSyncPDOs(CO_CANmodule_t* CANmodule) {
    uint32_t tpdoDeleted = 0U;

    CO_LOCK_CAN_SEND(CANmodule);
    /* Abort message from CAN module, if there is synchronous TPDO.
     * Take special care with this functionality. */
    if (/* messageIsOnCanBuffer && */ CANmodule->bufferInhibitFlag) {
        /* clear TXREQ */
        CANmodule->bufferInhibitFlag = false;
        tpdoDeleted = 1U;
    }
    /* delete also pending synchronous TPDOs in TX buffers */
    if (CANmodule->CANtxCount != 0U) {
        uint16_t i;
        CO_CANtx_t* buffer = &CANmodule->txArray[0];
        for (i = CANmodule->txSize; i > 0U; i--) {
            if (buffer->bufferFull) {
                if (buffer->syncFlag) {
                    buffer->bufferFull = false;
                    CANmodule->CANtxCount--;
                    tpdoDeleted = 2U;
                }
            }
            buffer++;
        }
    }
    CO_UNLOCK_CAN_SEND(CANmodule);

    if (tpdoDeleted != 0U) {
        CANmodule->CANerrorStatus |= CO_CAN_ERRTX_PDO_LATE;
    }
}
