==> zylos146/CANFuck/src/CO_driver_esp32.c <==
#include <stdio.h>
#include <string.h>
#include <unistd.h>
#include <stdlib.h>
#include <stdint.h>
#include "freertos/FreeRTOS.h"
#include "freertos/task.h"
#include "driver/gpio.h"
#include "sdkconfig.h"
#include "esp_err.h"
#include "esp_log.h"
#include "esp_timer.h"
#include "soc/soc.h"
#include "CANopen.h"
#include "CO_config_target.h"
#include "301/CO_driver.h"
#include "301/CO_Emergency.h"
#include "driver/twai.h"
#include "driver/gpio.h"

void CO_CANsetNormalMode(CO_CANmodule_t *CANmodule)
{
    
      ESP_LOGI("CANOpen.init", "install");
    /*Install CAN driver*/
    ESP_ERROR_CHECK(twai_driver_install(&generalConfig, &timingConfig, &filterConfig));
    /*Start CAN Controller*/
      ESP_LOGI("CANOpen.init", "start");
    ESP_ERROR_CHECK(twai_start());

      ESP_LOGI("CANOpen.init", "add handler");
    /*WORKAROUND: INTERRUPT ALLOCATION FÜR CAN NICHT MÖGLICH DA BEREITS IM IDF TREIBER VERWENDET*/
    /* Configure Timer interrupt function for execution every CO_CAN_PSEUDO_INTERRUPT_INTERVAL */
    ESP_ERROR_CHECK(esp_timer_create(&CO_CANinterruptArgs, &CO_CANinterruptPeriodicTimer));
    ESP_ERROR_CHECK(esp_timer_start_periodic(CO_CANinterruptPeriodicTimer, CO_CAN_PSEUDO_INTERRUPT_INTERVAL));
    /*Set Canmodule to normal mode*/
    CANmodule->CANnormal = true;
}

CO_ReturnError_t CO_CANmodule_init(
    CO_CANmodule_t *CANmodule,
    void *CANptr,
    CO_CANrx_t rxArray[],
    uint16_t rxSize,
    CO_CANtx_t txArray[],
    uint16_t txSize,
    uint16_t CANbitRate)
{
    CANmodulePointer = CANmodule;

    /* verify arguments */
    if (CANmodule == NULL || rxArray == NULL || txArray == NULL)
    {
        ESP_LOGE("CO_CANmodule_init", "Verify arguments! (Nullpointer in CANmodule|rxArray|txArray)");
        return CO_ERROR_ILLEGAL_ARGUMENT;
    }

    /* Configure object variables */
    CANmodule->CANptr = CANptr;
    CANmodule->rxSize = rxSize;
    CANmodule->rxArray = rxArray;
    CANmodule->txSize = txSize;
    CANmodule->txArray = txArray;
    CANmodule->useCANrxFilters = false;
    CANmodule->firstCANtxMessage = true;
    CANmodule->CANnormal = false;
    CANmodule->bufferInhibitFlag = false;
    CANmodule->CANtxCount = 0U;
    CANmodule->errOld = 0U;

    /*Init RX-Array*/
    for (uint16_t i = 0U; i < rxSize; i++)
    {
        CANmodule->rxArray[i].ident = 0U;
        CANmodule->rxArray[i].mask = (uint16_t)0xFFFFFFFFU;
        CANmodule->rxArray[i].object = NULL;
        CANmodule->rxArray[i].CANrx_callback = NULL;
    }
    /*Init TX-Array*/
    for (uint16_t i = 0U; i < txSize; i++)
    {
        CANmodule->txArray[i].bufferFull = false;
    }

    /* Configure CAN module registers */
    generalConfig.mode = TWAI_MODE_NORMAL;
    generalConfig.tx_io = CAN_TX_IO;
    generalConfig.rx_io = CAN_RX_IO;
    generalConfig.clkout_io = TWAI_IO_UNUSED;
    generalConfig.bus_off_io = TWAI_IO_UNUSED;
    generalConfig.tx_queue_len = CAN_TX_QUEUE_LENGTH;
    generalConfig.rx_queue_len = CAN_RX_QUEUE_LENGTH;
    generalConfig.alerts_enabled = TWAI_ALERT_ALL;
    generalConfig.clkout_divider = 0;

    /* Configure CAN timing */
    switch (CANbitRate)
    {
    case 25:
        //Set Baudrate to 25kbit;
        timingConfig.brp = 128;
        timingConfig.tseg_1 = 16;
        timingConfig.tseg_2 = 8;
        timingConfig.sjw = 3;
        timingConfig.triple_sampling = false;
        break;
    case 50:
        //Set Baudrate to 50kbit;
        timingConfig.brp = 80;
        timingConfig.tseg_1 = 15;
        timingConfig.tseg_2 = 4;
        timingConfig.sjw = 3;
        timingConfig.triple_sampling = false;
        break;
    case 100:
        //Set Baudrate to 100kbit;
        timingConfig.brp = 40;
        timingConfig.tseg_1 = 15;
        timingConfig.tseg_2 = 4;
        timingConfig.sjw = 3;
        timingConfig.triple_sampling = false;
        break;
    case 125:
        //Set Baudrate to 125kbit;
        timingConfig.brp = 32;
        timingConfig.tseg_1 = 15;
        timingConfig.tseg_2 = 4;
        timingConfig.sjw = 3;
        timingConfig.triple_sampling = false;
        break;
    case 250:
        //Set Baudrate to 250kbit;
        timingConfig.brp = 16;
        timingConfig.tseg_1 = 15;
        timingConfig.tseg_2 = 4;
        timingConfig.sjw = 3;
        timingConfig.triple_sampling = false;
        break;
    case 500:
        //Set Baudrate to 500kbit;
        timingConfig.brp = 8;
        timingConfig.tseg_1 = 15;
        timingConfig.tseg_2 = 4;
        timingConfig.sjw = 3;
        timingConfig.triple_sampling = false;
        break;
    case 800:
        //Set Baudrate to 800kbit;
        timingConfig.brp = 4;
        timingConfig.tseg_1 = 16;
        timingConfig.tseg_2 = 8;
        timingConfig.sjw = 3;
        timingConfig.triple_sampling = false;
        break;
    case 1000:
        //Set Baudrate to 1Mbit;
        timingConfig.brp = 4;
        timingConfig.tseg_1 = 15;
        timingConfig.tseg_2 = 4;
        timingConfig.sjw = 3;
        timingConfig.triple_sampling = false;
        break;
    default:
        ESP_LOGE("CO_driver", "%d => Invalid Baudrate! Using 1Mbit as default!", CANbitRate);
        //Set Baudrate to 1Mbit;
        timingConfig.brp = 4;
        timingConfig.tseg_1 = 15;
        timingConfig.tseg_2 = 4;
        timingConfig.sjw = 3;
        timingConfig.triple_sampling = false;
    }

    /* Configure CAN module hardware filters */
    if (CANmodule->useCANrxFilters)
    {
        /* CAN module filters are used, they will be configured with */
        /* CO_CANrxBufferInit() functions, called by separate CANopen */
        /* init functions. */
        /* Configure all masks so, that received message must match filter */

        //Don't filter messages
        ESP_LOGI("CO_driver", "RxFilters are active, but no filter configured.");
        filterConfig.acceptance_code = 0;
        filterConfig.acceptance_mask = 0xFFFFFFFF;
        filterConfig.single_filter = true;
    }
    else
    {
        /* CAN module filters are not used, all messages with standard 11-bit */
        /* identifier will be received */
        /* Configure mask 0 so, that all messages with standard identifier are accepted */
        //Don't filter messages
        filterConfig.acceptance_code = 0;
        filterConfig.acceptance_mask = 0xFFFFFFFF;
        filterConfig.single_filter = true;
    }
    return CO_ERROR_NO;
}

void CO_CANmodule_disable(CO_CANmodule_t *CANmodule)
{
    /* turn off the module */
    ESP_ERROR_CHECK(twai_stop());
}

CO_ReturnError_t CO_CANrxBufferInit(
    CO_CANmodule_t *CANmodule,
    uint16_t index,
    uint16_t ident,
    uint16_t mask,
    bool_t rtr,
    void *object,
    void (*CANrx_callback)(void *object, void *message))
{
    CO_ReturnError_t ret = CO_ERROR_NO;

    if ((CANmodule != NULL) && (object != NULL) && (CANrx_callback != NULL) && (index < CANmodule->rxSize))
    {
        /* buffer, which will be configured */
        CO_CANrx_t *buffer = &CANmodule->rxArray[index];

        /* Configure object variables */
        buffer->object = object;
        buffer->CANrx_callback = CANrx_callback;

        /* CAN identifier and CAN mask, bit aligned with CAN module. Different on different microcontrollers. */
        buffer->ident = ident & 0x07FFU;
        if (rtr)
        {
            buffer->ident |= 0x0800U;
        }
        buffer->mask = (mask & 0x07FFU) | 0x0800U;

        /* Set CAN hardware module filter and mask. */
        if (CANmodule->useCANrxFilters)
        {
            ESP_LOGE("CO_CANrxBufferInit", "No driver implementation for Filters");
        }
    }
    else
    {
        ESP_LOGE("CO_CANrxBufferInit", "((CANmodule!=NULL) && (object!=NULL) && (pFunct!=NULL) && (index < CANmodule->rxSize))==FALSE");
        ret = CO_ERROR_ILLEGAL_ARGUMENT;
    }

    return ret;
}

CO_ReturnError_t CO_CANsend(CO_CANmodule_t *CANmodule, CO_CANtx_t *buffer)
{
    CO_ReturnError_t err = CO_ERROR_NO;
    twai_status_info_t esp_can_hw_status;                      /* Define variable for hardware status of esp can interface */
    ESP_ERROR_CHECK(twai_get_status_info(&esp_can_hw_status)); /* Get hardware status of esp can interface */

    /* Verify overflow */
    if (buffer->bufferFull)
    {
        err = CO_ERROR_TX_OVERFLOW;
        ESP_LOGE("CO_CANsend", "CAN-tx-buffer overflow");
        if (!CANmodule->firstCANtxMessage)
        {
            /* don't set error, if bootup message is still on buffers */
            // TODO - CO_errorReport((CO_EM_t *)CANmodule->em, CO_EM_CAN_TX_OVERFLOW, CO_EMC_CAN_OVERRUN, buffer->ident);
            // TODO - Temporary fix for buffer overflow if LinMot loses power
            esp_restart();
        }
    }

    CO_LOCK_CAN_SEND();
    /* if CAN TX buffer is free, copy message to it */
    if ((esp_can_hw_status.msgs_to_tx < CAN_TX_QUEUE_LENGTH) && (CANmodule->CANtxCount == 0))
    {
        CANmodule->bufferInhibitFlag = buffer->syncFlag;
        twai_message_t temp_can_message; /* generate esp can message for transmission */
        /*MESSAGE MIT DATEN FÜLLEN*/
        temp_can_message.identifier = buffer->ident;     /* Set message-id in esp can message */
        temp_can_message.data_length_code = buffer->DLC; /* Set data length in esp can message */
        temp_can_message.flags = TWAI_MSG_FLAG_NONE;      /* reset all flags in esp can message */
        //temp_can_message.flags = TWAI_MSG_FLAG_SELF;
        if (buffer->rtr)
        {
            temp_can_message.flags |= TWAI_MSG_FLAG_RTR; /* set rtr-flag if needed */
        }
        for (uint8_t i = 0; i < buffer->DLC; i++)
        {
            temp_can_message.data[i] = buffer->data[i]; /* copy data from buffer in esp can message */
        }

        /* Transmit esp can message.  */
        esp_err_t send_err = twai_transmit(&temp_can_message, pdMS_TO_TICKS(CAN_MS_TO_WAIT));
        if (send_err == ESP_OK)
        {
            // TODO - Filter log system 
            // ESP_LOGI("CANsend", "ID: %d , Data %d,%d,%d,%d,%d,%d", temp_can_message.identifier, temp_can_message.data[0], temp_can_message.data[1], temp_can_message.data[2], temp_can_message.data[3], temp_can_message.data[4], temp_can_message.data[5]);
        }
        else
        {
            err = CO_ERROR_TIMEOUT;
            ESP_LOGE("CO_CANsend", "Failed to queue message for transmission - %u", send_err);
        }
    }
    /* if no buffer is free, message will be sent by interrupt */
    else
    {
        ESP_LOGE("CO_CANsend", "CAN-tx-buffer overflow");
        buffer->bufferFull = true;
        CANmodule->CANtxCount++;
    }
    CO_UNLOCK_CAN_SEND();

    return err;
}

void CO_CANclearPendingSyncPDOs(CO_CANmodule_t *CANmodule)
{
    //TODO: Implement this function
    ESP_LOGE("CO_CANclearPendingSyncPDOs", "This function is NOT implemented!");
    uint32_t tpdoDeleted = 0U;

    // CO_LOCK_CAN_SEND();
    // /* Abort message from CAN module, if there is synchronous TPDO.
    //  * Take special care with this functionality. */
    // if(/*messageIsOnCanBuffer && */CANmodule->bufferInhibitFlag){
    //     /* clear TXREQ */
    //     CANmodule->bufferInhibitFlag = false;
    //     tpdoDeleted = 1U;
    // }
    // /* delete also pending synchronous TPDOs in TX buffers */
    // if(CANmodule->CANtxCount != 0U){
    //     uint16_t i;
    //     CO_CANtx_t *buffer = &CANmodule->txArray[0];
    //     for(i = CANmodule->txSize; i > 0U; i--){
    //         if(buffer->bufferFull){
    //             if(buffer->syncFlag){
    //                 buffer->bufferFull = false;
    //                 CANmodule->CANtxCount--;
    //                 tpdoDeleted = 2U;
    //             }
    //         }
    //         buffer++;
    //     }
    // }
    // CO_UNLOCK_CAN_SEND();

    if (tpdoDeleted != 0U)
    {
        // TODO - CO_errorReport((CO_EM_t *)CANmodule->em, CO_EM_TPDO_OUTSIDE_WINDOW, CO_EMC_COMMUNICATION, tpdoDeleted);
    }
}
